added fixpr for bd full scan

--- a/action.yml
+++ b/action.yml
@@ -329,6 +329,12 @@ runs:
         blackduck_url: ${{ inputs.blackduck_url }}
         blackduck_scan_full: true
         blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
+        ### Uncomment below configuration to enable automatic fix pull request creation if vulnerabilities are reported
+        blackduck_fixpr_enabled: true
+        blackduck_fixpr_maxCount: 5
+        # blackduck_fixpr_filter_severities: 'CRITICAL,HIGH'
+        # blackduck_fixpr_useUpgradeGuidance: 'SHORT_TERM,LONG_TERM'
+        github_token: ${{ secrets.GITHUB_TOKEN }} # Mandatory when blackduck_fixpr_enabled is set to 'true'      
       env:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
