--- a/action.yml
+++ b/action.yml
@@ -325,7 +325,7 @@ runs:
         fi        
       shell: bash
 
-    - if: ${{inputs.blackduck == 'true' && github.event_name == 'push' }} #&& github.event.action == 'closed' && github.event.pull_request.merged == true}}
+    - if: ${{inputs.blackduck == 'true'}} #&& github.event.action == 'closed' && github.event.pull_request.merged == true}}
       name: Black Duck Analysis with synopsys-action
       uses: blackduck-inc/black-duck-security-scan@v2
       with:
